--- a/src/layouts/News/news.scss
+++ b/src/layouts/News/news.scss
@@ -34,6 +34,7 @@
 @media screen and (max-width: $breakpoint-mobile) {
 
     .newsarticle {
+        margin-top: 0.5em;
         width: 100vw;
         img {
             width: 100%;
