Update mobile styling

--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -1,5 +1,4 @@
-@import "../../styles/variables";
-
+@import '../../styles/variables';
 
 @mixin centerer {
   position: absolute;
@@ -101,7 +100,7 @@
     }
 
     p{
-      font-family: "Bebas Neue", "Helvetica", "Arial";
+      font-family: 'Bebas Neue', 'Helvetica', 'Arial';
       font-weight: 300;
       font-size: calc(14px + 0.8vw);
       margin-top: 8px;
