--- a/src/layouts/Homepage/index.scss
+++ b/src/layouts/Homepage/index.scss
@@ -1,9 +1,6 @@
+@import '../../styles/variables';
+
 .homepage {
     max-width: 850px;
     margin: auto;
-}
-
-#gallerytitle {
-    border-bottom: 1px solid #00d790;
-    margin-bottom: 40px;
 }
