Update jumbotron and styling

--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -13,6 +13,7 @@
         display: block;
         border: 0;
         cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
 
         &:hover {
             span {
