--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -173,11 +173,13 @@ button {
   background-color: $melon;
   color: white;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  outline:none;
 
   a {
   color: $text-color-light;
   font-family: $font-regular;
   }
+
 }
 
 img {
