--- a/src/components/CareerAccordion/index.scss
+++ b/src/components/CareerAccordion/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/variables";
-@import "../../styles/mixins";
+@import '../../styles/variables';
+@import '../../styles/mixins';
 
 .career-accordion {
     border-bottom: thin solid $light-grey;
@@ -15,28 +15,36 @@
         padding: 0;
         cursor: pointer;
         -webkit-tap-highlight-color: transparent;
+        align-items: center;
+
+        @media screen and (max-width: $breakpoint-mobile) {
+            min-height: 8em;
+
+            .job-header {
+                height: auto;
+            }
+        }
 
         .accordion-header {
             padding: 1em;
             flex: 0.8;
+
+            @media screen and (min-width: $breakpoint-mobile) {
+                display: flex;
+                align-items: center;
+            }
         }
 
         .job-header {
-            
-            
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-content: center;
             height: 100%;
-
-            
-            @media screen and (max-width: $breakpoint-mobile) {
-                height: auto;
-            }
         }
 
-        h4, h5 {
+        h4,
+        h5 {
             color: $licorice;
             text-align: left;
             font-weight: 500;
@@ -48,8 +56,9 @@
             }
         }
 
-        .location {
+        .locations {
             color: $diversity;
+            font-size: 85%;
         }
 
         .external {
@@ -58,7 +67,6 @@
         }
 
         .company-logo {
-
             img {
                 max-height: 3rem;
                 max-width: 8rem;
@@ -74,28 +82,25 @@
                 width: 6rem;
                 min-height: 3.5rem;
                 margin-left: -1em;
-                
+
                 img {
                     max-height: 4rem;
                     max-width: 6rem;
                 }
             }
-
         }
-
 
         .arrow {
             height: 0.5rem;
             position: absolute;
             right: 1.75rem;
-            top: calc(50% - .4rem);
+            top: calc(50% - 0.4rem);
             width: 1.5rem;
 
             &.open {
                 transform: rotate(180deg);
             }
         }
-        
     }
 
     .accordion-children {
@@ -109,23 +114,19 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 0 0 1rem 0;
 
-            
+            .chips {
+                padding: 1rem 0;
 
-        .chips {
-
-            padding: 1rem 1rem 0 1rem;
-           .chip {
-                margin-left: -0.2em;
-                margin-right: 0.6em;
-           }
-            
-        }
+                .chip {
+                    margin-left: -0.2em;
+                    margin-right: 0.6em;
+                }
+            }
 
             .job-info {
                 flex: 1;
-                font-size: 1.0rem;
+                font-size: 1rem;
                 font-weight: 450;
                 line-height: 1.2rem;
                 display: inline-block;
@@ -144,9 +145,9 @@
             transition: background-color 500ms ease-in-out;
 
             &:hover {
-                background-color: $diversity
+                background-color: $diversity;
             }
-            
+
             h2 {
                 color: #fff;
                 padding: 0.2em;
@@ -155,10 +156,7 @@
 
             a:hover {
                 text-decoration: none;
-                
             }
         }
-
     }
-    
 }
