Split filter options, add company filter

--- a/src/components/CareerAccordion/index.scss
+++ b/src/components/CareerAccordion/index.scss
@@ -59,6 +59,15 @@
         .locations {
             color: $diversity;
             font-size: 85%;
+
+            .location {
+                transition: border-bottom 200ms ease;
+                border-bottom: thin solid transparent;
+
+                &:hover, &.selected {
+                    border-bottom: thin solid $diversity;
+                }
+            }
         }
 
         .external {
