--- a/src/layouts/AboutPage/index.scss
+++ b/src/layouts/AboutPage/index.scss
@@ -2,7 +2,7 @@
 @import '../../styles/_variables';
 
 .aboutpage-container {
-	padding-top: 3em;
+	padding: 2em 0;
 	max-width: $page-width;
 	margin: auto;
 }
