--- a/src/layouts/DiversityPage/index.scss
+++ b/src/layouts/DiversityPage/index.scss
@@ -2,8 +2,8 @@
 @import '../../styles/_variables';
 
 .diversitypage-container {
-	padding-top: 3em;
-  max-width: $page-width;
+	padding: 2em 0;
+  	max-width: $page-width;
 	margin: auto;
 }
 
