--- a/src/components/PartnersGallery/index.scss
+++ b/src/components/PartnersGallery/index.scss
@@ -6,19 +6,23 @@
     h2 {
         padding-bottom: 1rem;
     }
-}
 
-.partners-table {
-    width: 100%;
-    text-align: center;
+    p {
+        text-align: center;
+    }
 
-    img {
-        max-width: 33%;
-        margin: 20px;
-        max-height: 60px;
+    .partners-table {
+        width: 100%;
+        text-align: center;
 
-        &.main-partner {
-            max-height: 80px;
+        img {
+            max-width: 33%;
+            margin: 20px;
+            max-height: 60px;
+
+            &.main-partner {
+                max-height: 80px;
+            }
         }
     }
 }
