--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $grape: #e73953;
 $licorice: #2d2d2c;
 $melon: #00d790;
 $diversity: #776aa2;
+$diversity-light: #e5e2ed;
 $background-color: #fafafa;
 $text-color-dark: $licorice;
 $text-color-light: #fafafa;
