--- a/src/components/Sustainability/index.scss
+++ b/src/components/Sustainability/index.scss
@@ -4,18 +4,29 @@
 .background_Images {
   padding: 1em;
   width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  align: center;
 }
 .background_Images:hover {
   transform: scale(0.98);
 }
 .background_Images.Small {
+  width: 32.5%;
+	display: inline-block;
+  // position: absolute;
+  padding: 0.1em;
+  padding-bottom: 1em;
+}
+.background_Images.middle {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 32.5%;
-	display: inline-block;
   padding: 0.1em;
   padding-bottom: 1em;
+  align: center;
 }
 
 #logo {
