--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -79,7 +79,7 @@
           min-height: 100%;
           max-height: 100%;
           width: 100vw;
-          object-fit: fill;
+          object-fit: cover;
         }
     }
 }
@@ -116,6 +116,7 @@
     height: 45%;
     margin-top: -3em;
 }
+
 
 @media screen and (min-height: 1000px) {
     .logo-container{
