--- a/src/components/Timeline/timeline.scss
+++ b/src/components/Timeline/timeline.scss
@@ -4,15 +4,11 @@
 
 
 #timeline_div{
-    //display: block;
     justify-content: center;
     display: flex;
-    //background-color: rgb(0, 0, 0);
 }
 
 #text_right{
-    //width: 370px;
-    //float: left;
     flex-grow: 1;
     margin-top: 106px;
     text-align: left;
@@ -23,17 +19,13 @@
     text-align: right;
     width: 100px;
     height: 100px;
-    //float: right;
-    //flex-grow: 1;
     margin-top: 106px;
     background-color: rgb(0, 0, 0);
     padding: 20px;
 }
 #div_left{
     margin-top: 50px;
-//background-color: black;
 }
-
 
 * {
     box-sizing: border-box;
@@ -45,7 +37,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding-bottom: 50px;
-    padding-top: 50px;
+    padding-top: 90px;
     
   }
   
@@ -156,54 +148,109 @@
     background-color: #2d2d2c;
     position: relative;
     border-radius: 12px;
+    
   }
   #p_text{
     color:white;
     text-align: center;
   }
-  #timeline_pic{
+
+  #timeline_pic_PM{
     border-radius: 50%;
     width: 100px;
     height: 100px;
     object-fit: cover;
+  }
+  #timeline_pic{
+    
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
     
   }
   #images{
-      width: 100px;
+      width: 90%;
       margin: auto;
-      margin-top: 5px;
+      margin-top: 3px;
+  }
+
+  #images_PM{
+    width: 100px;
+    margin: auto;
+    margin-top: 3px;
   }
   
   /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-    /* Place the timelime to the left */
+  @media screen and (max-width: 550px) {
+    /* Place the timelime behind and extend it */
     .timeline::after {
-    left: 31px;
+      position: absolute;
+      z-index: 1;
+    }
+
+    .timeline{
+      padding-top: 0px; 
+    }
+    /* Full-width containers */
+    .contentt {
+    padding: 0px 0px;
+    position: relative;
+    z-index: 2;
+    margin-top: 20px;
+    }
+
+    .containerright {
+      width: 100%;
+      padding: 10px 40px;
+      position: relative;
+      background-color: inherit;
+    }
+    .containerleft {
+      width: 100%;
+      padding-left: 25px;
+      padding-right: 25px;
+      padding: 10px 40px;
+      position: relative;
+      background-color: inherit;
+    }
+    /* Place the container to the left */
+    .leftleft {
+      left: 0;
+    }
+  
+  /* Place the container like the left */
+    .rightright {
+      left: 0%;
     }
     
-    /* Full-width containers */
-    .container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-    }
     
     /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    .rightright::before, .leftleft::before {
+    display: none;
     }
   
     /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
-    left: 15px;
+    .leftleft::after, .rightright::after {
+    display: none;
     }
     
-    /* Make all right containers behave like the left ones */
-    .right {
-    left: 0%;
+    #p_text{
+      padding: 5px;
+    }
+
+    #timeline_pic{
+      width: 100%;
+      height: 125%;
+      object-fit: cover; 
+      border-radius: 8%;
+      padding-bottom: 0px;
+    }
+
+    #images{
+        height: 120px;
+        width: 100%;
+        margin: auto;
+        margin-top: 3px;
     }
   }
 
